--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>Hasitha Weerasooriya</title>
     <style>
         /* Add your CSS styles here */
         body {
@@ -50,7 +50,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Website</h1>
+        <h1>Hasitha Weerasooriya</h1>
         <nav>
             <ul>
                 <li><a href="#" onclick="openTab('education')">Education</a></li>
@@ -63,25 +63,25 @@
     <main>
         <section id="education" class="tab active">
             <h2>Education</h2>
-            <p>This is where you can showcase your educational background.</p>
-            <p>Include information about your degrees, certifications, courses, etc.</p>
+            <p>I am currently a graduate student in Florida International University.</p>
+            <p></p>
         </section>
         
         <section id="blog" class="tab">
             <h2>Blog</h2>
-            <p>This is where you can share your thoughts, ideas, and experiences.</p>
-            <p>Write articles or posts on topics you're passionate about.</p>
+            <p>I will be sharing about what I am focusing month to month,Mathematics and all the random thoughts in my head.</p>
+            <p></p>
         </section>
         
         <section id="news" class="tab">
             <h2>News</h2>
             <p>Stay updated with the latest news and updates.</p>
-            <p>You can link to news sources or provide summaries of recent events.</p>
+            <p></p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 My Personal Website. All rights reserved.</p>
+        <p>&copy; 2024 Hasitha Weerasooriya. All rights reserved.</p>
     </footer>
 
     <script>
