--- a/index.html
+++ b/index.html
@@ -70,7 +70,17 @@
         <section id="blog" class="tab">
             <h2>Blog</h2>
             <p>I will be sharing about what I am focusing month to month,Mathematics and all the random thoughts in my head.</p>
-            <p></p>
+            <p>Courses I am taking this semester-</p>
+		
+	    <h3>Books I want to read</h3>
+
+	    <dl>
+  		<dt>Introduction to Linear Algebra (Gilbert Strang) 5th Edition</dt>
+  		<dd>- Introduction to linear algebra</dd>
+  		<dt></dt>
+  		<dd>- </dd>
+	   </dl>
+		
         </section>
         
         <section id="news" class="tab">
