links added-test

--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
             <h2>Blog</h2>
             <p>I will be sharing about what I am focusing month to month,Mathematics and all the random thoughts in my head.</p>
             <p>Courses I am taking this semester-</p>
+
+
+	    <h3>Focus for March 2024</h3>
+
+	    <dl>
+  		<dt>Fourier series,Fourier Transform,Discrete time Fourier transform,Discrete Fourier Transform</dt>
+  		<dd>- What is it meant by the phase?</dd>
+		<dd>- What is a real signal?</dd>
+  		<dt>Convolutional Neural networks-Deep dive</dt>
+  		<dt>Forward forward algorithm</dt>
+		<dt>Computer architecture</dt>
+  		<dd></dd>
+	   </dl>
 		
 	    <h3>Books I want to read</h3>
 
@@ -81,6 +94,15 @@
   		<dd>- </dd>
 	   </dl>
 		
+	    <h3>Courses I want to follow</h3>
+
+	    <dl>
+  		<dt>MIT 6.450 Principles of Digital communication</dt>
+  		<dd>- <a href="https://www.youtube.com/watch?v=KXFF8m4uGDc&list=PL2AD004D035C24F21">youtube playlist</a></dd>
+  		<dt></dt>
+  		<dd>- </dd>
+	   </dl>
+
         </section>
         
         <section id="news" class="tab">
