--- a/index.html
+++ b/index.html
@@ -99,9 +99,14 @@
 	    <dl>
   		<dt>MIT 6.450 Principles of Digital communication</dt>
   		<dd>- <a href="https://www.youtube.com/watch?v=KXFF8m4uGDc&list=PL2AD004D035C24F21">youtube playlist</a></dd>
-  		<dt></dt>
-  		<dd>- </dd>
-	   </dl>
+  		<dt>Spring 2015 -- Computer Architecture Lectures -- Carnegie Mellon</dt>
+  		<dd>- <a href="https://www.youtube.com/playlist?list=PL5PHm2jkkXmi5CxxI7b3JCL1TWybTDtKq">youtube playlist</a></dd>
+	   	<dt>DNN Lectures -- Carnegie Mellon</dt>
+  		<dd>- <a href="https://www.youtube.com/playlist?list=PLp-0K3kfddPxRmjgjm0P1WT6H-gTqE8j9">youtube playlist</a></dd>
+
+
+
+</dl>
 
         </section>
         
