--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hasitha Weerasooriya - Personal website" />
+    <meta name="author" content="Hasitha Weerasooriya" />
     <title>Hasitha Weerasooriya</title>
     <style>
         /* Add your CSS styles here */
