--- a/dumps.html
+++ b/dumps.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Hasitha Weerasooriya</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Dumps | Blog | Hasitha</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="header"></div>
   <main>
-    <section>
-      <h2>Welcome to My Site</h2>
-      <p>This is my personal website. Use the nav to explore.</p>
-    </section>
+    <h2>Dumps</h2>
+    <p>Here I post raw notes, thoughts, or experimental ideas.</p>
   </main>
   <div id="footer"></div>
   <script src="js/include.js"></script>
