--- a/news.html
+++ b/news.html
@@ -10,6 +10,24 @@
   <main>
     <h2>News</h2>
     <p>Updates, recent activities, and announcements.</p>
+
+     <!-- Section for news items -->
+    <ul>
+      <li>
+        Our paper titled 
+        <a href="https://ieeexplore.ieee.org/abstract/document/10580375" target="_blank">
+          "RF-SoC Platforms for RF-AI Spectrum Perception"
+        </a> 
+        was accepted to the 
+        <a href="https://aces-society.org/conference/Orlando_2024/" target="_blank">
+          ACES Conference
+        </a>.
+      </li>
+    </ul>
+
+    <!-- End of section -news -->
+
+    
   </main>
   <div id="footer"></div>
   <script src="js/include.js"></script>
