--- a/news.html
+++ b/news.html
@@ -13,10 +13,35 @@
 
      <!-- Section for news items -->
     <ul>
+
+            <li>
+        2024:Our paper titled 
+        <a href="https://ieeexplore.ieee.org/abstract/document/10850319" target="_blank">
+          "Adaptive SI Cancellation using Measured Impulse Responses for STAR Radio"
+        </a> 
+        was accepted to the 
+        <a href="https://attend.ieee.org/wisee-2024/" target="_blank">
+          WiSEE Conference
+        </a>.
+      </li>
+
+
       <li>
-        Our paper titled 
+        2024:Our paper titled 
         <a href="https://ieeexplore.ieee.org/abstract/document/10580375" target="_blank">
           "RF-SoC Platforms for RF-AI Spectrum Perception"
+        </a> 
+        was accepted to the 
+        <a href="https://aces-society.org/conference/Orlando_2024/" target="_blank">
+          ACES Conference
+        </a>.
+      </li>
+
+
+      <li>
+        2024:Our paper titled 
+        <a href="https://ieeexplore.ieee.org/abstract/document/10580085" target="_blank">
+          "Design of 145 GHz BPSK SDR on RF-SoC"
         </a> 
         was accepted to the 
         <a href="https://aces-society.org/conference/Orlando_2024/" target="_blank">
