--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@
         <a href="https://ieeexplore.ieee.org/abstract/document/11038918" target="_blank">
           "RF Anti-Jamming via Multi-Level Howells-Applebaum Null-forming: 32-Channels, 5.8 GHz/100 MHz/Beam on Xilinx Sx475T FPGA"
         </a> 
-        was accepted to IEEE Journal of Radio Frequency Identification.
+        was accepted to IEEE Journal of Radio Frequency Identification
         </a>.
       </li>
 
