--- a/dumps.html
+++ b/dumps.html
@@ -10,6 +10,18 @@
   <main>
     <h2>Dumps</h2>
     <p>Here I post raw notes, thoughts, or experimental ideas.</p>
+    
+    <section id="online-courses">
+  <h3>Online Course Recommendations</h3>
+  <p>Explore curated lists of useful online courses:</p>
+  <ul>
+    <li>
+      <a href="dumps/online-courses/dsp.html">Digital Signal Processing</a>
+    </li>
+    <!-- You can add more topics here later -->
+  </ul>
+</section>
+    
   </main>
   <div id="footer"></div>
   <script src="js/include.js"></script>
