--- a/dumps/online-courses/python.html
+++ b/dumps/online-courses/python.html
@@ -8,7 +8,7 @@
 <body>
   <div id="header"></div>
   <main>
-    <h2>Digital Signal Processing - Online Courses</h2>
+    <h2>Python - Online Courses</h2>
   </main>
   <div id="footer"></div>
   <script src="../../js/include.js"></script>
