--- a/dumps/food/food.html
+++ b/dumps/food/food.html
@@ -1,1 +1,27 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Food | Hasitha</title>
+  <link rel="stylesheet" href="../../style.css">
+</head>
+<body>
+  <div id="header"></div>
+  <main>
+    <h2>Food</h2>
+    <p>Recipes, ideas, and notes on meals.</p>
+
+    <ul>
+      <li><a href="snacks.html">Snacks</a></li>
+      <!-- Add more categories later like meals, desserts, etc. -->
+    </ul>
+  </main>
+  <div id="footer"></div>
+  <script src="../../js/include.js"></script>
+  <script>
+    loadHTML("header", "../../header.html");
+    loadHTML("footer", "../../footer.html");
+  </script>
+</body>
+</html>
